add fastmemcpy / support multithread mem test

--- a/mainmem/CMakeLists.txt
+++ b/mainmem/CMakeLists.txt
@@ -7,4 +7,5 @@ target_sources(memcpytest PRIVATE
 )
 target_include_directories(memcpytest PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/libsimdpp-2.1
+    ${CMAKE_CURRENT_SOURCE_DIR}/FastMemcpy-master
 )
