use multi thread / remove copy_n test

--- a/mainmem/CMakeLists.txt
+++ b/mainmem/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.16)
 project(memcpytest)
 
 add_executable(memcpytest)
@@ -8,4 +8,7 @@ target_sources(memcpytest PRIVATE
 target_include_directories(memcpytest PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/libsimdpp-2.1
     ${CMAKE_CURRENT_SOURCE_DIR}/FastMemcpy-master
+)
+set_property(TARGET memcpytest PROPERTY
+    MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
 )
