允许检测到win10和11系统（为了让angle能开启d3d11on12）

--- a/opencl/CMakeLists.txt
+++ b/opencl/CMakeLists.txt
@@ -70,6 +70,7 @@ if (WIN32)
     elseif (ANGLE_ZLIB_DEBUG_DLL)
         configure_file(${ANGLE_ZLIB_DEBUG_DLL} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
     endif()
+    target_sources(colorconv_gles PRIVATE app.manifest)
 endif()
 
 
