add test utility. update result

--- a/opencl/CMakeLists.txt
+++ b/opencl/CMakeLists.txt
@@ -79,3 +79,13 @@ if (WIN32)
     target_sources(colorconv_dx PRIVATE colorconv_runtest.h colorconv_dx.cpp)
     target_link_libraries(colorconv_dx PRIVATE d3d11 d3dcompiler dxgi)
 endif()
+
+if (WIN32)
+    list(APPEND CMAKE_PREFIX_PATH "D:/dev/boost_1_87_0/dist-vc/lib/cmake/Boost-1.87.0")
+    add_executable(do_opencltest)
+    set_target_properties(do_opencltest PROPERTIES MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+    target_sources(do_opencltest PRIVATE do_opencltest.cpp)
+    find_package(Boost REQUIRED CONFIG COMPONENTS process)
+    target_link_libraries(do_opencltest PRIVATE Boost::boost Boost::process)
+    target_compile_definitions(do_opencltest PRIVATE -DBOOST_PROCESS_USE_STD_FILESYSTEM)
+endif()
